--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,12 +1,10 @@
 name: firebase_flutter_basic
 description: "A new Flutter project."
-# The following line prevents the package from being accidentally published to
-# pub.dev using `flutter pub publish`. This is preferred for private packages.
+
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 
 # The following defines the version and build number for your application.
 # A version number is three numbers separated by dots, like 1.2.43
-# followed by an optional build number separated by a +.
 # Both the version and the builder number may be overridden in flutter
 # build by specifying --build-name and --build-number, respectively.
 # In Android, build-name is used as versionName while build-number used as versionCode.
@@ -38,10 +36,12 @@ dependencies:
   firebase_auth: ^5.5.2
   cloud_firestore: ^5.6.6
   firebase_database: ^11.3.5
-  logger: ^2.5.0
   velocity_x: ^4.3.1
   flutter_hooks: ^0.21.2
   firebase_storage: ^12.4.5
+  gap: ^3.0.1
+  file_picker: ^10.1.2
+  image_picker: ^1.1.2
 
 dev_dependencies:
   flutter_test:
